css/style.css
*{
    margin: 0;
    padding: 0;
}
body{
    min-height: 100vh;
    background-image: url("../00_assets/background.png");
    background-size: 400px;
    background-repeat: repeat;
    background-position: center;
    color: #2a3e49;
    font-family: "Winky Sans";
}
h1{
    font-family: "Poetsen One";
}
header{
    background-color: #E5E5E5;
    box-shadow: 3px 3px 5px rgba(0,0,0,0.1);
}
header .logo {
    position: relative;
    left: calc(50vw - 20vmin);
    width: 40vmin;
    height: 20vmin;
    object-fit: contain;
    margin-top: 0.5em;
}
nav{
    height: calc(100% + 10px);
}
nav ul{
    width: 100%;
    list-style: none;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
}
nav li{
    margin-top: 10px;
    padding-bottom: 10px;
    height: 50px;
    width: 100%;
}
nav a{
    height: 100%;
    justify-content: center;
    padding: 0px 30px;
    text-decoration: none;
    display: flex;
    align-items: center;
    color: #2a3e49;
}
nav .hover{
    display: none;
}
nav .topbar a{
    padding: 5px 0px
}
nav a img{
    max-width: 12vw;
    width: auto;
}
.menuButton{
    position: fixed;
    width: auto;
    margin-right: auto;
    display: inline;
}
nav a:hover{
    background-color: #e0d5c6;
}
nav .menuButton{
    margin: 5px 5px;
    padding: 10px 12px;
    height: auto;
}
nav .menuButton img{
    max-height: 50px;
    max-width: 50px;
    height: auto;
    width: auto;
}

.sidebar{
    position: fixed;
    top: 0px;
    left: 0px;
    height: 100vh;
    width: 300px;
    z-index: 999;
    background-color: rgba(229, 229, 229, 0.5);
    backdrop-filter: blur(10px);
    box-shadow: 5px 0px 10px rgba(0,0,0,0.45);
    display: none;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;
}

.sidebar li{
    margin-top: 0px;
    width: 100%;
}

.sidebar a{
    justify-content: left;
}

main{
    display: flex;
    flex-direction: column;
    position: relative;
    align-items: center;
}
main .background-plate{
    padding: 10px 0px;
    max-width: 99vw;
}
footer{
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100px;
}
footer #eds{
    width: 100px; 
}

@media(max-width: 800px){
    .topbar{
        display: none;
    }
}
@media(max-width: 400px){
    .sidebar{
        width: 100vw;
    }
}

